<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="212dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTopQuotedEntity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tvTopQuotedEntity"
            card_view:layout_constraintBottom_toTopOf="@+id/tvTopQuoteScore"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvTopQuote"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tvTopQuoteTitle"
            android:textSize="30sp"
            android:textStyle="italic"
            card_view:layout_constraintBottom_toTopOf="@+id/tvTopQuotedEntity"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTopQuoteDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tvTopQuoteDate"
            card_view:layout_constraintBottom_toTopOf="@+id/tvTopQuoteScore"
            card_view:layout_constraintStart_toEndOf="@+id/tvTopQuotedEntity" />

        <TextView
            android:id="@+id/tvTopQuoteScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:maxLength="4"
            android:text="@string/tvTopQuoteScore"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/tvTopQuoteScoreTitle" />

        <TextView
            android:id="@+id/tvTopQuoteScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tvTopQuoteScoreTitle"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="italic"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
